<resources>
    <string name="app_name">Blockchain-Based-IM-APP</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <string name="title_chat">聊天</string>
    <string name="title_contact">通讯录</string>
    <string name="title_setting">设置</string>
    <string name="send">发送</string>


    <string name="userName">用户名</string>
    <string name="psd">密码</string>
    <string name="phone">电话号码</string>
    <string name="remenberPSD">记住密码</string>
    <string name="RandG">阅读并同意</string>
    <string name="userAgm">用户协议</string>
    <string name="login">登录</string>
    <string name="Login">登录</string>
    <string name="register">注册</string>
    <string name="Register">注册</string>
    <string name="forgetPassword">忘记密码</string>
    <string name="dupPassword">重复密码</string>
    <string name="newPassword">新密码</string>
    <string name="registerNow">立即注册</string>
    <string name="sure">确定</string>
    <string name="resetPSD">重置密码</string>
    <string name="welcome">欢迎</string>



    <!-- Preferences -->
    <string name="header_personal_information">个人信息</string>
    <string name="set_user_name">设置用户名</string>
    <string name="new_user_name">新用户名</string>
    <string name="cancel">取消</string>
    <string name="OK">确定</string>
    <string name="set_profile_picture">设置头像（可与聊天界面的图片选择/拍摄合并）</string>
    <string name="summary_set_profile_picture">从图库选择图片或拍照</string>
    <string name="change_password">修改密码</string>

    <string name="set_font_size">设置字体大小</string>

    <string name="header_back_up_and_recover">备份与恢复</string>
    <string name="back_up_chat_history">备份聊天记录</string>
    <string name="recover_chat_history">恢复聊天记录</string>

    <string name="header_help_and_feedback">帮助与反馈</string>
    <string name="help">帮助</string>
    <string name="feedback">反馈</string>

    <string name="current_profile_picture">当前头像</string>
    <string name="select_from_gallery">从相册中选择图片</string>
    <string name="take_a_photo">拍摄</string>

    <string name="enter_old_password">请输入原密码：</string>
    <string name="enter_new_password">请输入新密码：</string>
    <string name="enter_new_password_again">请再次输入新密码：</string>
    <string name="ensure_change_password">确定修改</string>

    <string name="back_up_progress">备份进度：</string>
    <string name="start_back_up_chat_history">开始备份聊天记录</string>

    <string name="start_recover_chat_history">开始恢复聊天记录</string>

    <string name="common_problem">常见问题</string>
</resources>