<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/ll_setting_bar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/light_grey"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            android:layout_weight="1"
            android:gravity="center"
            android:textAlignment="center"
            android:text="@string/title_setting"
            android:textColor="@color/black"
            android:textSize="25sp" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_set_user_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/set_user_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toBottomOf="@+id/ll_setting_bar"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btn_set_profile_picture"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/set_profile_picture"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_set_user_name"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btn_change_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/change_password"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_set_profile_picture"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btn_set_font_size"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/set_font_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_change_password"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btn_back_up_chat_history"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/back_up_chat_history"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_set_font_size"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btn_recover_chat_history"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/recover_chat_history"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_back_up_chat_history"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btn_help"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/help"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_recover_chat_history"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btn_feedback"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/feedback"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_help"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>